Add cache to travis Remove unused package

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
   - "7"
+cache:
+  bundler: true
+  directories:
+  - node_modules
 script:
   "npm run build:dist"
 deploy:
