--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "react-tap-event-plugin": "^2.0.1",
-    "react-transition-group": "^1.1.3",
+    "react-tap-event-plugin": "^2.0.1"
     "trim": "0.0.1"
   },
   "devDependencies": {
