--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.1",
+    "firebase-tools": "^3.7.0",
     "html-webpack-plugin": "^2.28.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.17.0",
