--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "re-base": "^2.7.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
     "trim": "0.0.1"
   },
   "devDependencies": {
@@ -33,9 +36,11 @@
     "css-loader": "^0.28.1",
     "firebase-tools": "^3.7.0",
     "html-webpack-plugin": "^2.28.0",
+    "offline-plugin": "^4.8.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.17.0",
     "webpack": "^2.4.1",
+    "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^2.4.5",
     "webpack-manifest-plugin": "^1.1.0"
   }
