--- a/package.json
+++ b/package.json
@@ -5,36 +5,55 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"No test specified YET!\" && exit 0",
-    "start": "webpack-dev-server --env=dev --host 0.0.0.0 --public",
+    "start": "flow && webpack-dev-server --env=dev --host 0.0.0.0 --public",
     "build:dev": "webpack --env=dev --progress --profile --colors",
-    "build:dist": "webpack --env=prod --progress --profile --colors"
+    "build:dist": "webpack --env=prod --progress --profile --colors",
+    "flow": "flow"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "dumorango",
   "dependencies": {
     "firebase": "^3.9.0",
+    "history": "^4.6.1",
+    "immutable": "^3.8.1",
     "material-ui": "^0.17.4",
-    "moment": "^2.18.1",
-    "re-base": "^2.7.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "react-router-redux": "^4.0.8",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-form": "^6.7.0",
+    "redux-immutable": "^4.0.0",
+    "redux-observable": "^0.14.1",
+    "reselect": "^3.0.1",
+    "rxjs": "^5.4.0",
     "trim": "0.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.1",
+    "eslint": "3.11.1",
+    "eslint-config-airbnb": "13.0.0",
+    "eslint-config-airbnb-base": "10.0.1",
+    "eslint-import-resolver-webpack": "0.8.0",
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.7.1",
+    "eslint-plugin-redux-saga": "0.1.5",
+    "firebase-bolt": "^0.8.2",
     "firebase-tools": "^3.7.0",
+    "flow-bin": "^0.48.0",
     "html-webpack-plugin": "^2.28.0",
     "offline-plugin": "^4.8.1",
     "react-hot-loader": "^3.0.0-beta.6",
