--- a/package.json
+++ b/package.json
@@ -5,48 +5,43 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"No test specified YET!\" && exit 0",
-    "start": "flow && webpack-dev-server --env=dev --host 0.0.0.0 --public",
+    "start": "webpack-dev-server --env=dev --host 0.0.0.0 --public",
     "build:dev": "webpack --env=dev --progress --profile --colors",
     "build:dist": "webpack --env=prod --progress --profile --colors",
     "flow": "flow"
   },
   "author": "dumorango",
   "dependencies": {
+    "@types/react": "^15.0.29",
+    "@types/react-dom": "^15.5.0",
+    "@types/react-redux": "^4.4.43",
+    "@types/redux-form": "^6.6.3",
     "firebase": "^3.9.0",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "material-ui": "^0.17.4",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.0.29",
+    "react-dom": "^15.5.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0",
-    "redux-form": "^6.7.0",
+    "redux": "^3.7.0",
+    "redux-form": "^6.6.3",
     "redux-immutable": "^4.0.0",
     "redux-observable": "^0.14.1",
     "reselect": "^3.0.1",
     "rxjs": "^5.4.0",
-    "trim": "0.0.1"
+    "typed-immutable-record": "0.0.6"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
+    "awesome-typescript-loader": "^3.1.3",
     "css-loader": "^0.28.1",
     "eslint": "3.11.1",
     "eslint-config-airbnb": "13.0.0",
     "eslint-config-airbnb-base": "10.0.1",
     "eslint-import-resolver-webpack": "0.8.0",
-    "eslint-plugin-flowtype": "^2.34.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.7.1",
@@ -55,7 +50,12 @@
     "flow-bin": "^0.48.0",
     "html-webpack-plugin": "^2.28.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "source-map-loader": "^0.2.1",
     "style-loader": "^0.17.0",
+    "tslint": "^5.4.3",
+    "tslint-immutable": "^4.0.1",
+    "tslint-react": "^3.0.0",
+    "typescript": "^2.3.4",
     "webpack": "^2.4.1",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^2.4.5",
